# slack-channels-proxy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  flow.md  plan.md  pyproject.toml  slack_app_manifest.yaml
.github/workflows/: docker-image.yml
alembic/: README.md
app/: main.py
app/api/: routes.py  slack_events.py
app/clients/: slack.py
app/core/: db.py  docs_auth.py  settings.py  slack_auth.py  slack_signature.py
app/cruds/: sync_locks.py  workspace_channels.py
app/models/: __init__.py  sync_lock.py  workspace_channel.py
app/schemas/: channel.py
app/services/: channels.py
app/utils/: channel_names.py
data/: slack_proxy.db
helm/slack-proxy/: Chart.yaml  values.yaml
helm/slack-proxy/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
tests/: conftest.py  test_create_channel.py  test_docs_auth.py  test_get_channel_by_name.py  test_slack_client.py  test_slack_events.py  test_startup_sync.py  test_sync_lock.py
